--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,52 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>TestCaseDemo Maven Webapp</name>
     <url>http://maven.apache.org</url>
+
+
+
+    <properties>
+        <encoding-UTF8>UTF-8</encoding-UTF8>
+        <pb.common.version>2.0.0.8-RELEASE</pb.common.version>
+        <org.springframework-version>4.2.2.RELEASE</org.springframework-version>
+        <org.slf4j-version>1.7.12</org.slf4j-version>
+        <mybatis.version>3.4.0</mybatis.version>
+        <mysql.connector.version>5.1.38</mysql.connector.version>
+        <mybatis.spring.version>1.3.0</mybatis.spring.version>
+        <guava.version>18.0</guava.version>
+        <commons-codec.version>1.9</commons-codec.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <commons-collection.version>3.2.1</commons-collection.version>
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+        <aspectjweaver.version>1.8.4</aspectjweaver.version>
+        <junit.version>4.9</junit.version>
+        <testng.version>6.8.17</testng.version>
+        <!--<log4j.version>1.2.17</log4j.version> -->
+        <jackson.core.version>1.9.13</jackson.core.version>
+        <jackson.mapper.version>1.9.13</jackson.mapper.version>
+        <apache.httpclient.version>4.5</apache.httpclient.version>
+        <maven.compiler.version>3.3</maven.compiler.version>
+        <maven.source.version>2.2.1</maven.source.version>
+        <java.version>1.8</java.version>
+        <mybatis.generator.version>1.3.2.1-SNAPSHOT</mybatis.generator.version>
+        <maven.auto.config>0.0.1</maven.auto.config>
+        <fastjson.version>1.1.37</fastjson.version>
+        <jackson-databind.version>2.4.5</jackson-databind.version>
+        <jackson-core.version>2.4.5</jackson-core.version>
+        <gson.version>2.3</gson.version>
+        <aspectj_version>1.8.4</aspectj_version>
+        <jetty.version>6.1.26</jetty.version>
+        <servlet.version>3.0.1</servlet.version>
+        <jedis.version>2.8.0</jedis.version>
+        <oracle.connector.version>11.2.0.3.0</oracle.connector.version>
+        <quartz.version>2.2.2</quartz.version>
+        <commons-lang3.version>3.5</commons-lang3.version>
+        <logback.version>1.1.7</logback.version>
+        <hbcommon.version>0.0.3-SNAPSHOT</hbcommon.version>
+        <druid.version>1.0.29</druid.version>
+        <http-version>4.4.1</http-version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -14,6 +60,67 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.springframework-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
 
 
         <dependency>
@@ -50,6 +157,21 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
             <type>jar</type>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.0.BETA-6</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
         </dependency>
 
 
